--- a/jenkis_with_docker/Dockerfile
+++ b/jenkis_with_docker/Dockerfile
@@ -1,3 +1,15 @@
-from ubuntu:latest
-ENTRYPOINT ["ls"]
-CMD ["-la"]
+FROM ubuntu:latest
+RUN apt-get update \
+    && apt-get install -y nodejs \
+    && npm install -g npm \
+    && curl -sS https://dl.yarnpkg.com/debian/pubkey.gpg | gpg --dearmor | tee /etc/apt/keyrings/yarn.gpg >/dev/null \
+    && echo "deb [signed-by=/etc/apt/keyrings/yarn.gpg] https://dl.yarnpkg.com/debian/ stable main" > /etc/apt/sources.list.d/yarn.list \
+    && apt-get update \
+    && apt-get install -y yarn \
+    && apt-get install -y python3-pip \
+    && apt-get -y autoremove \
+    && apt-get clean \
+    && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
+
+# ENTRYPOINT ["ls"]
+# CMD ["-la"]
